GUIにパラメータファイルをparameterize化する機能を追加